--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,125 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css?family=Mansalva|Raleway&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Raleway', sans-serif;
+    color: #723F12;
+    text-decoration: none;
+}
+
+body {
+    background-color: #DCE3F2;
+}
+
+header {
+    margin-bottom: 20px;
+}
+
+header h1 {
+    color: #D87F31;
+    text-align: center;
+    margin: 20px 0 10px;
+}
+
+header h1 span {
+    font-family: 'Mansalva', cursive;
+}
+
+header h3 {
+    color: #723F12;
+    text-align: center;
+    font-size: 18px;
+    margin: 0 20px;
+}
+
+.cat-component-container {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    max-width: 640px;
+}
+
+.cat-component {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    border-radius: 10px;
+    margin: 20px 15px 30px;
+}
+
+.empty-cat-component {
+    border-radius: 10px;
+    margin: 20px 15px 30px;
+    border: 2px dashed #F2C39B;
+    background-color: rgba(242, 196, 155, 0.3);
+    width: 126px;
+    height: 116px;
+    margin-top: 46px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.cat-component-title {
+    font-family: 'Mansalva', cursive;
+    color: #DCE3F2;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: -8px;
+    font-weight: bold;
+    line-height: 16px;
+    background-color: #D87F31;
+    padding: 8px;
+    border-radius: 10px;
+    width: 110px;
+    height: 18px;
+    padding: 8px 10px;
+    transform: rotate(-15grad);
+    overflow: hidden;
+}
+
+.empty-cat-component-title {
+    font-family: 'Mansalva', cursive;
+    color: #D87F31;
+    font-size: 40px;
+}
+
+.cat-component-pic {
+    width: 100px;
+    height: 100px;
+    background-color:  #F2C39B;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.cat-component-icon-container {
+    margin-top: 6px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    width: 100%;
+}
+
+.cat-component-icon {
+    width: 20px;
+    height: 20px;
+    margin: 0 3px;
+    background-color: #F2C39B;
+    padding: 8px;
+    border-radius: 10px;
+}
+
+
+@media only screen and (min-width: 640px) {
+    .cat-component-container {
+        justify-content: flex-start;
+    }
+}
