Added standard header fields in html file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>StrayCatTracker</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Stray Cat Tracker</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
