--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   </head>
 
   <body>
+
+  <header>
+      <h1>
+          Stray Cat
+          <span>Tracker</span>
+      </h1>
+      <h3>Is there a stray cat in your area?</h3>
+  </header>
+
     <%= yield %>
   </body>
 </html>
