Added Gender property on a dropdown menu

--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -13,7 +13,10 @@
         </div>
         <div class="new-cat-component__row">
             <label for="gender">Gender</label>
-            <input id="gender" type="text" name="cat[gender]">
+            <select id="gender" class="new-cat-component__row" name=cat[gender]>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+            </select>
         </div>
 
         <div class="new-cat-component__row">
