--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,13 @@ header {
     }
 }
 
+.back-button {
+    background-color: $salmony-color;
+    padding: 8px 15px;
+    border-radius: 10px;
+    font-size: 14px;
+}
+
 #index,
 #show
 {
@@ -161,7 +168,7 @@ header {
         flex-flow: column nowrap;
         justify-content: space-around;
         padding: 10px 20px;
-        margin: 0 auto;
+        margin: 0 auto 30px;
 
         @media only screen and (min-width: 640px) {
             width: 300px;
@@ -223,18 +230,14 @@ header {
             }
         }
     }
-
-    .back-button {
-        background-color: $salmony-color;
-        padding: 8px 15px;
-        border-radius: 10px;
-        margin-top: 30px;
-        font-size: 14px;
-    }
-
 }
  
 #show {
+
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+
     .cat-component__container {
 
         justify-content: center;
