--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@ header {
         color: $orangy-color;
         text-align: center;
         margin: 20px;
+        font-size: 40px;
         span {
             font-family: 'Mansalva', cursive;
         }
@@ -252,6 +253,11 @@ header {
             flex-flow: column;
             justify-content: space-around;
             padding: 10px 10px 0 10px;
+
+            @media only screen and (min-width: 640px) {
+                width: 300px;
+                padding: 10px 70px;
+            }
 
             &__row {
                 display: flex;
