--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,8 @@ header {
 }
 
 #index,
-#show
+#show,
+#delete
 {
 
     .cat-component__container {
@@ -70,8 +71,8 @@ header {
         justify-content: center;
         max-width: 640px;
 
-        @media only screen and (min-width: 640px) {
-            justify-content: flex-start;
+        @media only screen and (min-width: 1024px) {
+            max-width: 1024px;
         }
 
         .cat-component {
@@ -80,7 +81,11 @@ header {
             align-items: center;
             border-radius: 10px;
             margin: 20px 15px 30px;
-    
+
+            @media only screen and (min-width: 1024px) {
+                margin: 20px 40px 30px;
+            }
+
             &__name {
                 font-family: 'Mansalva', cursive;
                 color: $whity-color;
@@ -279,6 +284,56 @@ header {
             }
 
         }
-
     }
+}
+
+#delete {
+
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+
+    .cat-component__container {
+
+        justify-content: center;
+    }
+
+    .cat-delete-component {
+
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: space-between;
+
+        background-color: $salmony-color;
+        width: 270px;
+        border-radius: 10px;
+        padding: 30px 15px;
+
+        margin: 0 auto 30px;
+
+        @media only screen and (min-width: 640px) {
+            width: 300px;
+            padding: 30px 70px;
+        }
+
+        .cat-component__pic {
+            margin: 10px 0;
+        }
+
+        h3 {
+            text-align: center;
+        }
+
+        input[type=submit] {
+            flex-grow: 0;
+            width: 40%;
+            font-size: 15px;
+            height: 25px;
+            margin-top: 20px;
+            background-color: $whity-color;
+        }
+        
+    }
+
 }
