Modified text on the Edit button

--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -32,7 +32,7 @@
         </div>
 
         <div class="new-cat-component__row">
-            <input id="submit" type="submit" name="submit">
+            <input id="submit" type="submit" name="submit" value="Modify">
         </div>
     </form>
 
