--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,7 @@ header {
     padding: 8px 15px;
     border-radius: 10px;
     font-size: 14px;
+    margin-bottom: 50px;
 }
 
 #index,
@@ -250,9 +251,10 @@ header {
 
         .cat-info-component {
             background-color: $salmony-color;
-            width: 230px;
+            width: 100%;
+            max-width: 300px;
             min-height: 172px;
-            margin: 20px 15px 30px;
+            margin: 20px 10px 30px;
             border-radius: 10px;
             display: flex;
             flex-flow: column;
@@ -260,7 +262,6 @@ header {
             padding: 10px 10px 0 10px;
 
             @media only screen and (min-width: 640px) {
-                width: 300px;
                 padding: 10px 70px;
             }
 
@@ -274,13 +275,16 @@ header {
 
             p {
                 text-align: right;
-                width: 35%;
-                align-self: flex-end;
+                width: 30%;
+                align-self: flex-start;
+                line-height: 22px;
+                margin-top: 2px;
             }
 
             h3 {
                 text-align: left;
-                width: 55%;
+                width: 60%;
+                line-height: 22px;
             }
 
         }
